# rmirror-cloud

./: .claude-workflow-card.txt  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DATA_PROCESSING_AGREEMENT.md  DEV-SETUP.md  LEGAL_DOCUMENTS_SUMMARY.md  LICENSE  PRIVACY_POLICY.md  README.md  docker-compose.yml  setup-dev-context-repo.sh
agent/: .claudecontext  .gitignore  BUILD.md  INITIAL_SYNC_FEATURE.md  README.md  STANDALONE_APP.md  b2-keychain.sh  build_macos.sh  config.example.yaml  entitlements-intel.plist  install.sh  launch-rmirror.bat  launch-rmirror.sh  pyproject.toml  release.sh  rmirror.spec  setup_notarization.sh  test_initial_sync_manual.md  uninstall.sh
agent/app/: __version__.py  browser_utils.py  config.py  logging_config.py  main.py  updater.py
agent/app/auth/: keychain.py
agent/app/remarkable/: __init__.py  metadata_scanner.py
agent/app/sync/: cloud_sync.py  initial_sync.py  metadata_sync.py  queue.py
agent/app/tray/: __init__.py  menu_bar.py
agent/app/watcher/: file_watcher.py
agent/app/web/: app.py  routes.py
agent/backend/: CLAUDE.md
agent/hooks/: hook-keyring.py
agent/tests/: conftest.py
agent/tests/unit/: __init__.py  test_cloud_sync.py  test_config.py
backend/: .claudecontext  .env.example  .env.production.template  .gitignore  CLAUDE.md  CLERK_SETUP.md  DEPLOY_HETZNER.md  NOTION_INTEGRATION_GUIDE.md  README.md  SETUP.md  SYNC_ARCHITECTURE_OLD.md  SYNC_ARCHITECTURE_V2.md  TODO_SYNC_ARCHITECTURE.md  alembic.ini  backfill_by_metadata.py  backfill_page_hashes.py  backfill_specific_notebooks.py  check_content_vs_db.py  export_notebook_pages_mappings.py  fix_page_order_from_content.py  hash_coverage_report.py  nginx-rate-limits.conf  notebook_pages_mappings.sql  pyproject.toml  rebuild_notebook_pages_mapping.py  rebuild_notebook_pages_optimized.py  reset_password.py  show_missing_pages_summary.py  test_agent_content_upload.py  test_content_upload.sh  test_notion_sync.py  test_todo_extraction.py  upload_marton_content.py
backend/alembic/: env.py
backend/alembic/versions/: 25dbfc9e1b86_add_unified_sync_tables_and_integration_.py  2d86de0d1c3c_add_subscription_and_quota_tables.py  2d96f4a915f4_add_waitlist_table.py  30f649af594a_backfill_obsidian_content_hashes.py  32a12f25dc9a_add_folder_structure_to_notebooks.py  330fb8f63d23_add_not_synced_ocr_status.py  (+19 more)
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py
backend/benchmark/: config.yaml  requirements.txt  run.py  score.py
backend/dashboard/: CLAUDE.md
backend/scripts/: POSTGRES_MIGRATION.md  README.md  deploy-remote.sh  deploy-umami.sh  deploy.sh  deployment_checklist.md  migrate_from_remarkable_integration.py  migrate_sqlite_to_postgres.py  migrate_to_postgres.sh  rebuild_folder_paths.py  setup-deploy-permissions.sh  setup_postgres.sh  upload_metadata.py
backend/tests/: FINAL_TEST_RESULTS.md  RUN_TESTS.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_beta_quota.py  test_config.py  test_quota_emails.py  test_quota_integration.py  test_quota_service.py  test_sync_worker_todos.py  test_todoist_oauth.py  test_todoist_sync.py
backend/utilities/: delete_test_user.py
docs/: README.md  (+4 more)
(+237 files in other folders)
