[tool.poetry]
name = "rmirror-backend"
version = "0.1.0"
description = "rMirror Cloud Backend API"
authors = ["rMirror Contributors"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^5.0.1"
rq = "^1.16.1"
boto3 = "^1.34.34"
pypdf = "^3.17.4"
python-magic = "^0.4.27"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
tenacity = "^8.2.3"
rmscene = "^0.6.0"
rmc = {git = "https://github.com/ricklupton/rmc.git"}
anthropic = "^0.18.0"
notion-client = "^2.7.0"
clerk-backend-sdk = "^1.0.0"
svix = "^1.17.0"
resend = "^2.19.0"
pypdf2 = "^3.0.1"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
